# InvEHL

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  README.tex
eikonal/: CMakeLists.txt  eikonal.cpp  eikonal.hpp
iniReader/: iniReader.cpp  iniReader.hpp
io/: iniReader.hpp  ioEigen.cpp  ioEigen.hpp  writeEigen.cpp  writeEigen.hpp
pde/: mesh.cpp  mesh.h  mesh.hpp
resources/: abc.txt  b.txt  c.txt  control.txt  in.ini  test.nb  wtf.txt
resources/mesh/: element.txt  node.txt  time.txt
resources/misc/: output.txt
resources/state/: 000.txt  001.txt  004.txt  005.txt  006.txt  007.txt  009.txt  01.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  02.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  03.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  (+166 more)
src/eikonal/: eikonal.cpp  eikonal.hpp
src/io/: iniReader.cpp  iniReader.hpp  ioEigen.cpp  ioEigen.hpp  utilities.cpp  utilities.hpp
src/pde/: data.cpp  data.hpp  function.cpp  function.hpp  mesh.cpp  mesh.hpp  tfe.cpp  tfe.hpp
test/: eikonal_test.cpp  iniReader_test.cpp  pde_test.cpp
